    - projects/jftest3d works on more systems now
  - added GL.glTexSubImage2D() function
  - added GL.glDisableVertexAttrib() function
  - fixed VoIP : could not handle realm with a space
    - created a String.split() replacement that can handle "quotes" and trim()s each substring
  - fixed VoIP codec selection (see javaforce.voip.RTPChannel.start())
  - jPhoneLite/1.9.5 released!

Jun 9/2015 : JF 9.0.0 released!
  - after spending years working with JNA I've decided to switch back to JNI.
    - JNA uses libffi which is too complex and VERY slow.
  - Native sound has been removed - don't notice a latency difference with Java sound anymore and it's just redundant
  - All Windows native code has been converted and tested
    - mingw headers have greatly improved since last time I used JNI (only 2 minor GUIDs missing)
    - jawt is used to get window handles for OpenGL support
    - removed jfRDP for now (I have a different plan)
  - All Linux native code has been converted and mostly tested (except the jfLinux related APIs)
    - OpenGL seems stable
    - jawt is used to get window handles for OpenGL support
    - WebCamera uses libv4l2 which will convert colorspaces to RGB
      - so all cameras should be supported now
    - deb packages now specify Architecture set to amd64 since the packages do include some native code
      - since Linux is free I'm not going to bother with i386 packages (objections?)
  - Mac native code only supports WebCamera and ffmpeg
    - OpenGL is not supported because Java 7's new AWT only allows for a CALayer
      - the NSOpenGLCALayer doesn't give full control over the OpenGLContext (when to swap, etc).
        - you can only use OpenGL in the drawInOpenGLContext callback
      - hence JOGL uses a GLAutoDrawable (it's automatic)
        - I'ved used JOGL before but found the API too complex (and too many jars/dlls)
      - some JavaForce OpenGL projects require full OpenGL control