@@ -6,7 +6,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="classpath" location="javaforce.jar"/>
-  <property name="version" value="0.2"/>
+  <property name="version" value="0.3"/>
 
   <import file="../../base.xml"/>
 
@@ -55,10 +55,11 @@
   <target name="release-bin" description="create release zip file">
     <copy file="../../jars/javaforce.jar" todir="."/>
     <zip destfile="${app}-${version}.zip">
-      <fileset dir=".">
-        <include name="*.jar"/>
-        <include name="*.txt"/>
-        <include name="run.bat"/>
+      <fileset dir="..">
+        <include name="jfrecordcamera/*.jar"/>
+        <include name="jfrecordcamera/*.txt"/>
+        <include name="jfrecordcamera/run.bat"/>
+        <include name="jfrecordcamera/jfnative*"/>
       </fileset>
       <fileset dir="../.." includes="license.txt"/>
     </zip>
@@ -81,6 +82,7 @@
         <include name="jf/projects/${app}/nbproject/*.xml"/>
         <include name="jf/jars/javaforce.jar"/>
         <include name="jf/stubs/*"/>
+        <include name="jf/native/*"/>
       </fileset>
     </zip>
     <move file="${app}-src-${version}.zip" todir="${home}/release"/>
