@@ -1,5 +1,5 @@
 Package: jfrecordcamera
-Version: 0.2
+Version: 0.3
 Architecture: amd64
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 1
