@@ -1,9 +1,0 @@
-Exception: STATUS_ACCESS_VIOLATION at rip=00100578ECD
-rax=0000000000000000 rbx=0000000000C2C5F0 rcx=0000000000000004
-rdx=0000000000000002 rsi=0000000100783DD4 rdi=0000000100903E18
-r8 =0000000000000030 r9 =0000000000000000 r10=0000000000C30000
-r11=000000010064B0A7 r12=000000010090C1F4 r13=0000000000000662
-r14=000000010090CC38 r15=00000006001F8140
-rbp=00000000FFFFFFFF rsp=0000000000C2C520
-program=c:\cygwin\bin\gdb.exe, pid 2576, thread main
-cs=0033 ds=002B es=002B fs=0053 gs=002B ss=002B
