@@ -1,6 +1,6 @@
 Buildroot: /.
 Name: jfrecordcamera
-Version: 0.2
+Version: 0.3
 Release: 1
 Summary: Records Camera
 License: LGPL
