@@ -1,5 +1,5 @@
 Package: jfrecorddesktop
-Version: 0.3
+Version: 0.4
 Architecture: amd64
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 1
