@@ -1,5 +1,5 @@
 Package: jfvideo
-Version: 0.17
+Version: 0.18
 Architecture: amd64
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 1
